project(untitled)
cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
include(FindPkgConfig)
find_package(OpenCV REQUIRED)
find_package(Threads REQUIRED)
find_package(Boost COMPONENTS system REQUIRED)
find_package(GTK2 REQUIRED)
include_directories(${GTK2_INCLUDE_DIRS})
include_directories(${BOOST_INCLUDE_DIRS})
include_directories( ${OpenCV_INCLUDE_DIRS})
#set({PKG_CONFIG_PATH} "${PKG_CONFIG_PATH}:${MYLIB_ROOT}/pkgconfig")
set(ENV{PKG_CONFIG_PATH} "${CMAKE_INSTALL_PREFIX}:/pkgconfig/:ENV{PKG_CONFIG_PATH}")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} gtk+-2.0")
aux_source_directory(. SRC_LIST)
add_executable(${PROJECT_NAME} ${SRC_LIST})
set(BOOST_LIB ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS} ${GTK2_LIBRARIES} ${BOOST_LIB})
add_definitions(${GTK_CFLAGS} ${GTK_CFLAGS_OTHER})

